--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+//            "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
             "assets": [
               "src/favicon.ico",
               "src/assets"
